confik-macros/tests/trybuild/compile-fail/default-invalid-expr.stderr
error: expected `,`
 --> tests/trybuild/compile-fail/default-invalid-expr.rs:3:30
  |
3 |     #[confik(default = Hello World)]
  |                              ^^^^^
